# spec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  compatibility.md  glossary.md  index.md  justfile  versioning.md
.github/workflows/: ci.yml
browser/v1/: _index.md  common.md  load_check.md  scripted_check.md
src/: pyproject.toml
v1/: _index.md  check.md  common.md  dns.md  domain.md  http.md  tcp.md  tls.md
