[project]
name = "synthetic-open-schema-model"
version = "0.1.0"
description = "YAML-based schema for defining synthetic monitoring checks"
readme = "README.md"
authors = [
    { name = "Checks Dev", email = "info@ideatives.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "croniter>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-watch>=4.2",
    "pre-commit>=3.7",
    "isort>=5.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthetic_open_schema_model"]
